infrastructure/base/apps/metrics-server/networkPolicy.yaml
# allow ingress from nodes
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-node
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: metrics-server
  ingress:
    - fromEntities:
      - remote-node
      toPorts:
        - ports:
            - port: "10250"
---
# allow ingress from prometheus
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-prometheus
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: metrics-server
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-prometheus
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "10250"
---
# allow egress to kube-apiserver and kubelet
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-apiserver
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: metrics-server
  egress:
    - toEntities:
      - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-kubelet
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: metrics-server
  egress:
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "10250"
